# darpa

./: .gitignore  CMakeLists.txt  README.md  TRITONS.h
TestFiles/: Ding_Dong2.wma  input_test_file  input_test_file2
bench/: receive_path.py  transmit_path.py  ut_rx.py  ut_tx.py
competition/: .CMakeLists.txt.swp  .tag_source_demo.h.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  correlator_cc.cc  correlator_cc.h  pngen.pl
gr-accumulator_cc/: CMakeLists.txt
gr-accumulator_cc/docs/: README.accumulator_cc
gr-accumulator_cc/docs/doxygen/: Doxyfile.in
gr-accumulator_cc/grc/: CMakeLists.txt  accumulator_cc_accumulator_sync_cc.xml  accumulator_cc_expected_cc.xml
gr-accumulator_cc/include/accumulator_cc/: CMakeLists.txt  accumulator_sync_cc.h  api.h  expected_cc.h
gr-accumulator_cc/lib/: CMakeLists.txt  TRITONS.h  accumulator_sync_cc_impl.cc  accumulator_sync_cc_impl.h  expected_cc_impl.cc  expected_cc_impl.h  qa_accumulator_cc.cc  qa_accumulator_cc.h  test_accumulator_cc.cc
gr-accumulator_cc/python/: .samples.swp  CMakeLists.txt  __init__.py  qa_accumulator_sync_cc.py
gr-accumulator_cc/swig/: CMakeLists.txt  accumulator_cc_swig.i
gr-correlator_cc/: CMakeLists.txt
gr-correlator_cc/docs/: README.correlator_cc
gr-correlator_cc/docs/doxygen/: Doxyfile.in
gr-correlator_cc/grc/: CMakeLists.txt  correlator_cc_correlator_cc.xml  correlator_cc_go_start_cc.xml  correlator_cc_preamble_insert_cc.xml
gr-correlator_cc/include/correlator_cc/: CMakeLists.txt  api.h  correlator_cc.h  go_start_cc.h  preamble_insert_cc.h
gr-correlator_cc/lib/: CMakeLists.txt  correlator_cc_impl.cc  correlator_cc_impl.h  go_start_cc_impl.cc  go_start_cc_impl.h  pngen.pl  preamble_insert_cc_impl.cc  preamble_insert_cc_impl.h  qa_correlator_cc.cc  qa_correlator_cc.h  test_correlator_cc.cc
gr-correlator_cc/python/: CMakeLists.txt  __init__.py  qa_correlator_cc.py  qa_preamble_insert_cc.py
gr-correlator_cc/swig/: CMakeLists.txt  correlator_cc_swig.i
gr-crc/: CMakeLists.txt
gr-crc/docs/: README.crc
gr-crc/docs/doxygen/: Doxyfile.in
gr-crc/grc/: CMakeLists.txt  crc_crcrx.xml  crc_crctx.xml
gr-crc/include/: TRITONS.h
gr-crc/include/crc/: CMakeLists.txt  api.h  crcrx.h  crctx.h
gr-crc/lib/: CMakeLists.txt  crcrx_impl.cc  crcrx_impl.h  crctx_impl.cc  crctx_impl.h  qa_crc.cc  qa_crc.h  test_crc.cc
gr-crc/python/: CMakeLists.txt  __init__.py  qa_crctx.py
gr-crc/swig/: CMakeLists.txt  crc_swig.i
gr-packetizer/: CMakeLists.txt
gr-packetizer/docs/: README.packetizer
gr-packetizer/docs/doxygen/: Doxyfile.in
gr-packetizer/grc/: CMakeLists.txt  packetizer_packet_sink.xml  packetizer_packet_source.xml
gr-packetizer/lib/: CMakeLists.txt  packet_sink_impl.cc  packet_sink_impl.h  packet_source_impl.cc  packet_source_impl.h  qa_packetizer.h  test_packetizer.cc
gr-packetizer/python/: CMakeLists.txt  __init__.py  qa_packet_sink.py  qa_packet_source.py
gr-packetizer/swig/: CMakeLists.txt  packetizer_swig.i
gr-print_bb/: CMakeLists.txt
gr-print_bb/docs/: README.print_bb
gr-print_bb/grc/: CMakeLists.txt  print_bb_print_bb.xml
gr-print_bb/lib/: CMakeLists.txt  print_bb_impl.cc  print_bb_impl.h  qa_print_bb.cc  qa_print_bb.h  test_print_bb.cc
gr-print_bb/python/: CMakeLists.txt  __init__.py  qa_print_bb.py
gr-print_bb/swig/: CMakeLists.txt  print_bb_swig.i
gr-print_cc/: CMakeLists.txt
gr-print_cc/docs/: README.print_cc
gr-print_cc/grc/: CMakeLists.txt  print_cc_print_cc.xml
gr-print_cc/lib/: .print_cc_impl.cc.swp  CMakeLists.txt  print_cc_impl.cc  print_cc_impl.h  qa_print_cc.cc  qa_print_cc.h  test_print_cc.cc
gr-print_cc/python/: CMakeLists.txt  __init__.py  qa_print_cc.py
gr-print_cc/swig/: CMakeLists.txt  print_cc_swig.i
gr-rscoding_bb/: CMakeLists.txt
gr-rscoding_bb/docs/: README.rscoding_bb
gr-rscoding_bb/grc/: CMakeLists.txt  rscoding_bb_decode_bb.xml  rscoding_bb_encode_bb.xml
gr-rscoding_bb/lib/: CMakeLists.txt  decode_bb_impl.cc  decode_bb_impl.h  encode_bb_impl.cc  encode_bb_impl.h  qa_rscoding_bb.cc  qa_rscoding_bb.h  test_rscoding_bb.cc
gr-rscoding_bb/python/: CMakeLists.txt  __init__.py  qa_decode_bb.py  qa_encode_bb.py
gr-rscoding_bb/swig/: CMakeLists.txt  rscoding_bb_swig.i
gr-spreader/: CMakeLists.txt
gr-spreader/docs/: README.spreader
gr-spreader/grc/: CMakeLists.txt  spreader_despreader_cb.xml  spreader_spreader_bc.xml
gr-spreader/lib/: CMakeLists.txt  despreader_cb_impl.cc  despreader_cb_impl.h  qa_spreader.cc  qa_spreader.h  spreader_bc_impl.cc  spreader_bc_impl.h  test_spreader.cc  walshgen.pl
gr-spreader/python/: CMakeLists.txt  __init__.py  qa_despreader_cb.py  qa_spreader_bc.py
gr-spreader/swig/: CMakeLists.txt  spreader_swig.i
howto/build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
howto/lib/: CMakeLists.txt  square_ff_impl.cc
howto/python/: qa_square_ff.py  qa_square_ff.py~
hurdle3/: benchmark_rx.py  benchmark_rx2.py  benchmark_rx3.py  benchmark_tx.py  benchmark_tx2.py  benchmark_tx3.py  benchmark_tx_working.py  finalSessionLog1  finalSessionLog2  readme  receive_path.py  sessionLog  sessionLog2  transmit_path.py  uhd_interface.py
hurdle3/fft/: uhd_fft
hurdle3/filter/: benchmark_rx.py  receive_path.py  uhd_interface.py
hurdle3/filter_tx/: -10_db  0_db  30_db  benchmark_tx.py  benchmark_tx_one_top_block.py  neg_10_db  output  output_50  output_50_neg_10_db  output_50_neg_10_db_alpha_001  output_50_neg_10_db_alpha_05  output_50_neg_10_db_alpha_1  output_50_neg_alpha_05_lock_1pkts  output_50_neg_alpha_05_lock_20pkts  output_50_neg_alpha_05_lock_2pkts  output_50_neg_alpha_05_lock_50pkts  output_50_neg_alpha_05_r1  output_50_neg_alpha_05_r2  output_50_neg_alpha_05_r3  output_dave  transmit_path.py  transmit_path_one_block_with_filter.py
pingpong/: rx_pingpong.py  tx_pingpong.py
scripts/: bot1_rx.py  bot1_tx.py  dir  dsc-wildcard.rb  receive_path.py  transmit_path.py
test/: CMakeLists.txt  Chapter1.txt  FellowshipOfTheRing.txt  TX_Input_Data  filecopy.cc  rx.py  rx.sh  tx.py  tx.sh
test/orbit/: bot1_rx.py  bot1_tx.py  script  tx.py
(+80 files in other folders)
